# my_trading_prj

./: README.md  pyproject.toml
my_trading_prj/: consts.py  graph.py  main.py  push_to_DB.py  state.py
my_trading_prj/chains/: choose_indicator.py  interpret.py  news_signal.py  route.py
my_trading_prj/nodes/: DBcontextGetter.py  __init__.py  indicator_chooser.py  interpreter.py  news_signal.py  router.py  trend.py  volatility.py
